@@ -23,12 +23,13 @@ use Cwd qw(getcwd);
 use File::Copy qw(move);
 use File::Find qw(find);
 use File::Path qw(remove_tree);
+use Git::Repository        ();
 use IO::Compress::Xz       ();
 use IO::Uncompress::Gunzip ();
 use IPC::Run qw(run);
 use IPC::System::Simple qw(systemx);
 use List::SomeUtils qw(lastval);
-use List::Util qw(any);
+use List::Util qw(any first);
 
 # Base commands to run for various types of distributions.  Additional
 # variations may be added depending on additional configuration parameters.
@@ -390,13 +391,19 @@ sub make_distribution {
     }
 
     # Export the Git repository into a new directory.
-    my @git = (
-        'git',              'archive',
-        "--remote=$source", "--prefix=${prefix}/",
-        'master',
+    my $repo     = Git::Repository->new(work_tree => $source);
+    my @branches = $repo->run(
+        'for-each-ref' => '--format=%(refname:short)', 'refs/heads/',
     );
-    my @tar = qw(tar xf -);
-    run(\@git, q{|}, \@tar) or die "@git | @tar failed with status $?\n";
+    my $head    = first { $_ eq 'main' || $_ eq 'master' } @branches;
+    my $archive = $repo->command(archive => "--prefix=${prefix}/", $head);
+    run([qw(tar xf -)], '<', $archive->stdout)
+      or die "git archive | tar xf - failed with status $?\n";
+    $archive->close();
+
+    if ($archive->exit != 0) {
+        die 'git archive failed with status ' . $archive->exit . "\n";
+    }
 
     # Change to that directory and run the configured commands.
     chdir($prefix);
@@ -461,9 +468,9 @@ App::DocKnot::Dist - Prepare a distribution tarball
 =head1 REQUIREMENTS
 
 Git, Perl 5.24 or later, and the modules File::BaseDir, File::ShareDir,
-IO::Compress::Xz (part of IO-Compress-Lzma), IO::Uncompress::Gunzip (part of
-IO-Compress), IPC::Run, IPC::System::Simple, Kwalify, List::SomeUtils, and
-YAML::XS, all of which are available from CPAN.
+Git::Repository, IO::Compress::Xz (part of IO-Compress-Lzma),
+IO::Uncompress::Gunzip (part of IO-Compress), IPC::Run, IPC::System::Simple,
+Kwalify, List::SomeUtils, and YAML::XS, all of which are available from CPAN.
 
 The tools to build whatever type of software distribution is being prepared
 are also required, since the distribution is built and tested as part of
@@ -557,6 +564,8 @@ an implementation detail of make_distribution().
 =item make_distribution()
 
 Generate distribution tarballs in the C<destdir> directory provided to new().
+The distribution will be generated from the first branch found named either
+C<main> or C<master>.
 
 If C<destdir> already contains a subdirectory whose name matches the
 C<tarname> of the distribution, it will be forcibly removed.  In order to
